[package]
name = "Household-Manager"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.30.0" #The GUI framework
eframe = "0.24.1"
serde = { version = "1.0.217", features = ["derive"] } #The serialization/deserialization library
#serde_json = "1.0.138" (optional for working with JSON; useful for saving/loading data)