[package]
name = "Household-Manager"
version = "0.1.0"
edition = "2021"

[target.'cfg(target_arch = "wasm32")'.dependencies]
egui = "0.31.1" #The GUI framework
eframe = "0.31.1"
serde = { version = "1.0.217", features = ["derive"] } #The serialization/deserialization library
wasm-bindgen = "0.2"
web-sys = "0.3"

[dependencies]
eframe = "0.31.1" #Framework for egui
serde = { version = "1.0.217", features = ["derive"] } #The serialization/deserialization library

[lib]
crate-type = ["cdylib", "rlib"]
